<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <com.qi.commonview.view.title.TitleView
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/common_white"
        app:leftIcon="@drawable/ic_back_red"
        app:titleText="@string/title_authentication_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@color/common_white"
        android:orientation="vertical"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keyName" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/nameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keyIdentityCard" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/identityCardValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleCard"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/common_item_height"
                android:gravity="center_vertical"
                android:text="@string/keyIdentityCardPhoto" />

            <RelativeLayout
                android:id="@+id/frontCardGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleCard">

                <ImageView
                    android:id="@+id/frontCardPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bg_add_photo2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/common_item_height"
                    android:layout_below="@id/frontCardPhoto"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/front" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleCard"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@id/frontCardGroup">

                <ImageView
                    android:id="@+id/reverseCardPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bg_add_photo2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/common_item_height"
                    android:layout_below="@id/reverseCardPhoto"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/card_reverse" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>